# bptorch

./: .gitignore  CMakeLists.txt  README.md  bptorch-scm-1.rockspec  init.lua
src/cpu/: HSM.cpp  HSoftMax.cpp  init.cpp
src/cuda/: HSMHost.cpp  HSoftMaxHost.cpp  init.cu
src/lua/: HSoftMax.lua  MOperator.lua  init.lua
thpp/: .gitrepo
thpp/thpp/: CMakeLists.txt  Storage-inl.h  Storage.cpp  Storage.h  StorageSerialization.cpp  Tensor-inl.h  Tensor.h  TensorSerialization.cpp  config.h.in
thpp/thpp/detail/: Storage.h  Tensor.h
thpp/thpp/folly/: Portability.h  Range.h  Traits.h
